<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5FB300"
    tools:context=".login">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/welcome_to_login_page"
        android:textColor="#B30000"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/log_email"
    android:hint="@string/email_in_login"
    android:autofillHints="email"
    android:inputType="textEmailAddress"
    android:layout_centerInParent="true"
    android:textSize="25sp"
    android:textColorHint="#B31500"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/log_pass"
        android:layout_below="@+id/log_email"
        android:autofillHints="password"
        android:hint="@string/password_in_login"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:textColorHint="#B30600"
        android:textSize="25sp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/log_sub"
        android:layout_below="@+id/log_pass"
        android:layout_centerInParent="true"
        android:text="@string/submit_login"/>
    <androidx.core.widget.ContentLoadingProgressBar
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/log_progress"/>

</RelativeLayout>