<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#45B300"
    tools:context=".profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/friend_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

      android:layout_marginTop="30sp"
        android:src="@drawable/profile" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/name_in_profile"
        android:id="@+id/profile2_name"
        android:textColor="#B30F00"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/friend_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile2_name"
        android:layout_alignParentEnd="true"

        android:layout_centerVertical="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="171dp"
        android:text="@string/status_in_profile"
        android:textColor="#B30F00" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/friend_status"
        android:layout_centerVertical="true"
        android:layout_marginTop="94dp"
        android:id="@+id/request"
        android:layout_centerHorizontal="true"
        android:text="@string/request_in_profile"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/request"
            android:layout_centerHorizontal="true"
            android:text="@string/decline_request_in_profile"
            android:id="@+id/Decline_request"/>

</RelativeLayout>